# oclean

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: oclean.rb
src/: app.rs  cleanup.rs  main.rs  process_tree.rs  resolve.rs
tests/: cli.rs
